src/ui/snapshots/prow__ui__repo_filter__tests__snapshot_all_state_cursor_at_top.snap
---
source: src/ui/repo_filter.rs
expression: "render_to_string(&repos, &selected, 0)"
---
Filter by repository                                        
                                                            
> [x] All                                                   
  [x] owner/a                                               
  [x] owner/b                                               
  [x] owner/c
