src/ui/snapshots/prow__ui__repo_filter__tests__snapshot_cursor_on_middle_repo.snap
---
source: src/ui/repo_filter.rs
expression: "render_to_string(&repos, &selected, 2)"
---
Filter by repository                                        
                                                            
  [x] All                                                   
  [x] owner/a                                               
> [x] owner/b                                               
  [x] owner/c
