src/ui/snapshots/prow__ui__repo_filter__tests__snapshot_partial_selection.snap
---
source: src/ui/repo_filter.rs
expression: "render_to_string(&repos, &selected, 2)"
---
Filter by repository                                        
                                                            
  [ ] All                                                   
  [ ] owner/a                                               
> [x] owner/b                                               
  [ ] owner/c
